--- a/css/navbar.css
+++ b/css/navbar.css
@@ -82,7 +82,7 @@ html, body {
     text-align: center;
     display: flex;
     color: white;
-    font-family: monospace;
+    font-family: Courier, monospace;
     text-decoration: none;
 }
 
@@ -105,7 +105,7 @@ html, body {
 .dropdown #dropBtn {
     text-align: center;
     color: white;
-    font-family: monospace;
+    font-family: Courier, monospace;
     cursor: pointer;
     border: none;
     outline: none;
@@ -143,7 +143,7 @@ html, body {
     background-color: #444444;
     color: white;
     text-align: center;
-    font-family: monospace;
+    font-family: Courier, monospace;
     font-size: 2em;
     text-decoration: none;
 }
